Se agrega valor asignado de la sumatoria total de los clientes a pagar

--- a/Send Outlook Email.xaml
+++ b/Send Outlook Email.xaml
@@ -1,4 +1,13 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Send_Outlook_Email" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="578,1393" sap2010:WorkflowViewState.IdRef="Send Outlook Email_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Send_Outlook_Email" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+  <x:Members>
+    <x:Property Name="value1" Type="InOutArgument(x:Double)" />
+    <x:Property Name="value2" Type="InOutArgument(x:Double)" />
+  </x:Members>
+  <mva:VisualBasic.Settings>
+    <x:Null />
+  </mva:VisualBasic.Settings>
+  <sap:VirtualizedContainerService.HintSize>578,1588</sap:VirtualizedContainerService.HintSize>
+  <sap2010:WorkflowViewState.IdRef>Send Outlook Email_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
       <x:String>System.Activities</x:String>
@@ -48,7 +57,7 @@
       <AssemblyReference>UiPath.Mail</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Send Outlook Email" sap:VirtualizedContainerService.HintSize="538,1313" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Send Outlook Email" sap:VirtualizedContainerService.HintSize="538,1508" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="scg:List(scg:List(x:String))" Name="emails" />
       <Variable x:TypeArguments="sd:DataTable" Default="[New DataTable]" Name="dtSalarios" />
@@ -58,24 +67,26 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
+    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" Buttons="Ok" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="500,59" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;₡&quot; + Convert.ToDecimal(value1).ToString(&quot;#,##0.00&quot;)]" TopMost="True" />
+    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" Buttons="Ok" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="500,59" sap2010:WorkflowViewState.IdRef="MessageBox_2" Text="[&quot;₡&quot; + Convert.ToDecimal(value2).ToString(&quot;#,##0.00&quot;)]" TopMost="True" />
     <Assign sap:VirtualizedContainerService.HintSize="500,64" sap2010:WorkflowViewState.IdRef="Assign_1">
       <Assign.To>
         <OutArgument x:TypeArguments="scg:List(scg:List(x:String))">[emails]</OutArgument>
       </Assign.To>
       <Assign.Value>
         <InArgument x:TypeArguments="scg:List(scg:List(x:String))" xml:space="preserve">[New List(Of List(Of String)) From {
-New List(Of String) From {("calvaradon@ucenfotec.ac.cr"), ("Carlos Alvarado Nunez"), ("₡5 000 000")},
-New List(Of String) From {("jcotof@ucenfotec.ac.cr"), ("Juan Jose Coto Fallas"), ("₡8 000 000")}
+New List(Of String) From {("calvaradon@ucenfotec.ac.cr"), ("Carlos Alvarado Nunez"), ("₡" + Convert.ToDecimal(value1).ToString("#,##0.00"))},
+New List(Of String) From {("jcotof@ucenfotec.ac.cr"), ("Juan Jose Coto Fallas"), ("₡" + Convert.ToDecimal(value2).ToString("#,##0.00"))}
 }]</InArgument>
       </Assign.Value>
     </Assign>
-    <ui:ForEach x:TypeArguments="scg:List(x:String)" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="500,1117" sap2010:WorkflowViewState.IdRef="ForEach`1_2" Values="[emails]">
+    <ui:ForEach x:TypeArguments="scg:List(x:String)" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="500,1114" sap2010:WorkflowViewState.IdRef="ForEach`1_2" Values="[emails]">
       <ui:ForEach.Body>
         <ActivityAction x:TypeArguments="scg:List(x:String)">
           <ActivityAction.Argument>
             <DelegateInArgument x:TypeArguments="scg:List(x:String)" Name="item" />
           </ActivityAction.Argument>
-          <Sequence sap:VirtualizedContainerService.HintSize="468,982" sap2010:WorkflowViewState.IdRef="Sequence_3">
+          <Sequence sap:VirtualizedContainerService.HintSize="468,980" sap2010:WorkflowViewState.IdRef="Sequence_3">
             <Sequence.Variables>
               <Variable x:TypeArguments="x:String" Name="filePath" />
             </Sequence.Variables>
@@ -112,13 +123,13 @@ New List(Of String) From {("jcotof@ucenfotec.ac.cr"), ("Juan Jose Coto Fallas"),
                 </ActivityAction>
               </ui:ExcelApplicationScope.Body>
             </ui:ExcelApplicationScope>
-            <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="430,239" sap2010:WorkflowViewState.IdRef="Sequence_2">
+            <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="430,237" sap2010:WorkflowViewState.IdRef="Sequence_2">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-              <ui:SendOutlookMail Bcc="{x:Null}" Cc="{x:Null}" MailMessage="{x:Null}" TimeoutMS="{x:Null}" Account="carlosalvarado310.ca@gmail.com" Body="[&quot;Hola &quot;+item(1)+&quot;. Este es el Excel con los datos del deposito. El total del deposito es :  &quot;+item(2)]" DisplayName="Send Outlook Mail Message" sap:VirtualizedContainerService.HintSize="330,147" sap2010:WorkflowViewState.IdRef="SendOutlookMail_1" IsBodyHtml="False" IsDraft="False" Subject="Deposito del mes" To="[item(0)]">
+              <ui:SendOutlookMail Bcc="{x:Null}" Cc="{x:Null}" MailMessage="{x:Null}" TimeoutMS="{x:Null}" Account="carlosalvarado310.ca@gmail.com" Body="[&quot;Hola &quot;+item(1)+&quot;. Este es el Excel con los datos del deposito. El total del deposito es :  &quot;+item(2)]" DisplayName="Send Outlook Mail Message" sap:VirtualizedContainerService.HintSize="330,145" sap2010:WorkflowViewState.IdRef="SendOutlookMail_1" IsBodyHtml="False" IsDraft="False" Subject="Deposito del mes" To="[item(0)]">
                 <ui:SendOutlookMail.Files>
                   <scg:List x:TypeArguments="InArgument(x:String)" Capacity="4">
                     <InArgument x:TypeArguments="x:String">[filePath]</InArgument>
